sdk/rust/geotrace-sdk/tests/snapshots/inspect_tests__snapshot_inspect_file_with_a_label_row_that_is_not_utf8.snap
---
source: sdk/rust/geotrace-sdk/tests/inspect_tests.rs
expression: inspect_bytes(&bytes)?
---
GeoTrace Data File - version 2
────────────────────────────────────────────────────────────
Metadata
  —

Nav Points              1 records
  time                  2025-05-23T11:33:20Z → 2025-05-23T11:33:20Z
  lat                   55.000° – 55.000°
  lon                   12.000° – 12.000°
  heading               90.0° – 90.0°
  speed                 3.0 – 3.0 m/s  (1 / 1 present)

Satellite Reports       0 records

Markers                 3 records
  icons                 warning ×3
  labels                "start", "end"
  unreadable label      1 / 3 rows
    row 1               the field row is not UTF-8: invalid utf-8 sequence of 1 bytes from index 0

Event Markers           0 records

Event Marker Styles     0 records

Channels                0 channels
────────────────────────────────────────────────────────────
